--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table border="1">
+	<table border="1" style="background-Color:yellow;">
+		<caption>Student Details</caption>
 		<tr>
 			<th>NAME</th>
 			<th>AGE</th>
