--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table border="1" style="background-Color:yellow;">
+	<table border=:1  style="background-Color:yellow; border: solid 1px rgb(0,0,0)">
 		<caption>Student Details</caption>
 		<tr>
 			<th>NAME</th>
